Add source code

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div id="app"></div>
-  <!-- Vue app будет смонтирован сюда -->
+  <!-- Vue app will be mounted here -->
 </body>
 </html>
