--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Logos Food Cards</title>
+  <title>Food Delivery</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
